--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "",
 	"name": "fundit-exam",
 	"version": "1.0.0",
 	"description": "",
@@ -10,7 +11,8 @@
 		"dev": "lerna run start --parallel",
 		"start": "node server/index.js",
 		"postinstall": "npm run bootstrap",
-		"a": "lerna ls"
+		"a": "lerna ls",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"author": "",
 	"license": "ISC",
