--- a/package.json
+++ b/package.json
@@ -1,25 +1,57 @@
 {
-	"homepage": "",
-	"name": "fundit-exam",
+	"homepage": "https://companies-app-1.herokuapp.com/",
+	"name": "@fundit-exam/client",
 	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"b": "npm run bootstrap",
-		"bootstrap": "lerna bootstrap",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "lerna run start --parallel",
-		"start": "node server/index.js",
-		"postinstall": "npm run bootstrap",
-		"a": "lerna ls",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"lerna": "^3.13.1"
-	},
+	"private": true,
 	"dependencies": {
-		"cors": "^2.8.5"
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
+		"@mui/icons-material": "^5.2.5",
+		"@mui/material": "^5.2.7",
+		"@types/axios": "^0.14.0",
+		"@types/jest": "24.0.18",
+		"@types/node": "12.7.2",
+		"@types/react": "16.9.2",
+		"@types/react-dom": "16.9.0",
+		"axios": "^0.19.0",
+		"classnames": "^2.2.6",
+		"client": "^0.0.1",
+		"cuid": "^2.1.6",
+		"eslint": "^6.2.1",
+		"eslint-config-standard": "^14.0.0",
+		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-node": "^9.1.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-react": "^7.14.3",
+		"eslint-plugin-standard": "^4.0.1",
+		"react": "^16.9.0",
+		"react-dom": "^16.9.0",
+		"react-scripts": "^3.1.2",
+		"semantic-ui-react": "^2.0.4",
+		"typescript": "^3.9.10"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
