--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-	"homepage": "https://companies-app-1.herokuapp.com/",
 	"name": "@fundit-exam/client",
 	"version": "1.0.0",
 	"private": true,
@@ -16,6 +15,7 @@
 		"axios": "^0.19.0",
 		"classnames": "^2.2.6",
 		"client": "^0.0.1",
+		"concurrently": "^7.0.0",
 		"cuid": "^2.1.6",
 		"eslint": "^6.2.1",
 		"eslint-config-standard": "^14.0.0",
@@ -24,6 +24,7 @@
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-react": "^7.14.3",
 		"eslint-plugin-standard": "^4.0.1",
+		"firebase": "^9.6.8",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-scripts": "^3.1.2",
@@ -31,7 +32,10 @@
 		"typescript": "^3.9.10"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"dev": "react-scripts start",
+		"watch:server": "json-server --watch ./data/db.json",
+		"watch:client": "set PORT=3006 && react-scripts start",
+		"start": "concurrently npm:watch:*",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
